﻿12/24/2015 0.9.0.1 - Alpha
  Dependency Updated: Forge 10.13.4.1558
  Dependency Updated: AE2-rv3-13
  Merged pull request #255 - Keridos
  Merged pull request #252 - Aquahatsche
  Fixed #255 TODO's
  
10/13/2015 0.9.0.0 - Alpha
  Dependency Updated: AE2-rv3-9
  Fixes #227: Storage bus void support restored, attaches to network when placed with pre-set filters, and condenser support restored. May address #234
  Added EssentiaProvider to Thaumic Tinkerer blacklist, will be supported in the next release of Thaumic Tinkerer #228
  Fixes #229: Storage bus can fully utilize the Essentia Reservoir without setting filters.
  Fixes #239: Essentia cells obey their filters when used in an IO port.
  Fixes #240: Added checks to not redraw the essentia storage monitor or send update packets if not needed.

8/3/2015 0.8.10.10
  Fixed #226: Properly sided E.V.C. packet code.

7/30/2015 0.8.10.9
  Fixed #223: Removed recursive call causing stack overflow.
  Aspect registration is more robust when dealing with AE Api changes.
  Removed unneeded GL calls from storage monitor.
  E.V.C. produces light when active.

7/23/2015 0.8.10.8
  Fixes #219: ACT buttons can be right-clicked to go backwards.
  Cleaned up some GUI code.
  Really fixed #216.

7/22/2015 0.8.10.8
  Added E.V.C GUI.
  API Change: Tile whitelist now requires capacity, and includes a dual add method.
  Fixes #216: Arcane crafting patterns can no longer substitute items, must match exactly.
  More EVC research notes.
  The Essentia Terminal can be used to drain or fill the EVC.

7/21/2015 0.8.10.8
  Added Essentia Vibration Chamber recipe & research.
  Preliminary work on Vibration Chamber GUI.

7/10/2015 0.8.10.8
  Fixes #214: Empty jars can again be filled in Essentia Terminal.
  Fixes #215: Level Emitter adjustment button placement corrected.
  Essentia Vibration Chamber:
  * Produces Power
  * Power based on essentia type
  * Power cycle length based on essentia type
  * Saves data
  * Updates client
  