@@ -1,9 +1,13 @@
-﻿12/24/2015 0.9.0.1 - Alpha
+﻿12/24/2015 0.9.1.0 - Alpha
   Dependency Updated: Forge 10.13.4.1558
   Dependency Updated: AE2-rv3-13
   Merged pull request #255 - Keridos
   Merged pull request #252 - Aquahatsche
   Fixed #255 TODO's
+  Fixes #228 - Corrected blacklisting code
+  Fixes compatibility with Thaumic Tinkerer.
+  Fixes #249 - Capacity can be checked on any essentia container, inject now respects essentia the container would not take.
+  Fixes issue with Technomancy(and any other mods that use my API) where essentia was voided when mod container is full.
   
 10/13/2015 0.9.0.0 - Alpha
   Dependency Updated: AE2-rv3-9
